Fix css issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -67,8 +67,8 @@ nav a:hover {
     flex-direction: column;
     justify-content: space-between;
     width: 100vw;
-    height: 100%;
-    height: calc(var(--vh, 1vh) * 100);
+    height: 100vh;
+    max-height: -webkit-fill-available;
     position: relative;
 }
 
